// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/veradco/plugin";
option java_multiple_files = true;
option java_package = "io.grpc.veradco.plugin";
option java_outer_classname = "VeradcoPluginProto";

package plugin;

// Interface exported by the server.
service Plugin {
  rpc Execute(AdmissionReview) returns (AdmissionResponse) {}
}

// Points are represented as latitude-longitude pairs in the E7 representation
// (degrees multiplied by 10**7 and rounded to the nearest integer).
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message AdmissionReview {
  bytes review = 1;
  string configuration = 2;
  bool   dryRun = 3;
}

// A latitude-longitude rectangle, represented as two diagonally opposite
// points "lo" and "hi".
message AdmissionResponse {
  bytes response = 1;
  string error = 2;
}
